--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -41,7 +41,6 @@ footer {
     display: grid;
     background-color: var(--Primary_color);
     color: var(--Accent1);
-    border-radius: 5px;
     text-align: center;
     height: auto;
 }
@@ -51,12 +50,13 @@ footer {
     align-items: center;
 }
 
-h1,
+
+/* h1,
 h2 {
     display: block;
     font-size: 2.5rem;
     margin: 0.51rem;
-}
+} */
 
 footer p {
     display: block;
@@ -72,6 +72,8 @@ h2 {
     text-align: left;
 }
 
+
+/* 
 ul {
     display: grid;
 }
@@ -79,7 +81,7 @@ ul {
 ul li {
     padding: 0.5em;
     list-style-type: none;
-}
+} */
 
 nav a {
     color: white;
