--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -81,6 +81,9 @@
         grid-row: 1/2;
         /* height: 200px; */
     }
+    .hero img {
+        width: 100%;
+    }
     .news {
         grid-column: 1/3;
         grid-row: 2/3;
