--- a/css/small.css
+++ b/css/small.css
@@ -30,6 +30,7 @@ body {
     background-color: var(--Accent1);
     margin: auto;
     padding: 1em;
+    align-items: center;
 }
 
 
@@ -50,10 +51,22 @@ footer {
     margin: 1em;
 }
 
-header img {
+header {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+}
+
+img {
     width: 200px;
     height: auto;
+    float: center;
     border-radius: 50%;
+    grid-row: 1;
+}
+
+h1 {
+    grid-row: 2;
 }
 
 
