--- a/lesson8/css/large.css
+++ b/lesson8/css/large.css
@@ -1,45 +1,62 @@
-html {
-    font-family: Ubuntu, sans-serif;
-}
-
-table {
-    border-collapse: collapse;
-    border: 2px solid rgb(200, 200, 200);
-    letter-spacing: 1px;
-    font-size: 0.8rem;
-}
-
-td,
-th {
-    border: 1px solid rgb(190, 190, 190);
-    padding: 10px 20px;
-}
-
-th {
-    background-color: rgb(235, 235, 235);
-}
-
-td {
-    text-align: center;
-}
-
-tr:nth-child(even) td {
-    background-color: rgb(250, 250, 250);
-}
-
-tr:nth-child(odd) td {
-    background-color: rgb(245, 245, 245);
-}
-
-caption {
-    padding: 10px;
-}
-
-tbody {
-    font-size: 95%;
-    font-style: italic;
-}
-
-tfoot {
-    font-weight: bold;
-}
+    @media only screen and (min-width: 64em) {
+        html {
+            font-family: Ubuntu, sans-serif;
+        }
+        h1 {
+            text-align: center;
+        }
+        table {
+            border-collapse: collapse;
+            border: 1px solid #acbabc;
+            letter-spacing: 1px;
+            font-size: 0.8rem;
+            margin: auto;
+            max-width: 275px;
+            height: 300px;
+            box-shadow: 10px 10px 20px #628ca6;
+        }
+        td,
+        th {
+            border: 1px solid #acbabc;
+        }
+        th {
+            background-color: #628ca6;
+            color: white;
+        }
+        td {
+            text-align: center;
+        }
+        tr:nth-child(even) td {
+            background-color: #e7ffed;
+        }
+        tr:nth-child(odd) td {
+            background-color: #e7f0ed;
+        }
+        tbody {
+            font-size: 95%;
+            font-style: italic;
+        }
+        tfoot {
+            font-size: 0.8em;
+            padding: 0.5em;
+            font-weight: bold;
+        }
+        tr:hover,
+        tr:nth-child(even):hover {
+            background-color: black;
+        }
+        tr:nth-child(even) {
+            background-color: green;
+        }
+        #header,
+        #footer {
+            background-color: #7fb9c2;
+            color: black;
+        }
+        footer {
+            font-weight: normal;
+        }
+        #currentGoal {
+            background-color: #628ca6;
+        }
+    }
