--- a/lesson8/css/medium.css
+++ b/lesson8/css/medium.css
@@ -1,3 +1,26 @@
-html {
-    font-family: Ubuntu, sans-serif;
-}
+    @media only screen and (min-width: 32.5em) {
+        h1 {
+            font-size: 2.5rem;
+        }
+        table {
+            border-collapse: collapse;
+            border: 1px solid #acbabc;
+            letter-spacing: 1px;
+            font-size: 0.8rem;
+            margin: auto;
+            max-width: 275px;
+            height: 300px;
+            box-shadow: 10px 10px 20px #628ca6;
+        }
+        #currentGoal {
+            background-color: #628ca6;
+        }
+        #header {
+            color: black;
+        }
+        tfoot {
+            font-size: 0.8em;
+            padding: 0.5em;
+            font-weight: bold;
+        }
+    }
