--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -1,3 +1,92 @@
 html {
     font-family: Ubuntu, sans-serif;
 }
+
+h1 {
+    text-align: center;
+}
+
+body {
+    width: 80%;
+    margin: auto;
+}
+
+html {
+    font-family: Ubuntu, sans-serif;
+}
+
+h1 {
+    text-align: center;
+}
+
+table {
+    border-collapse: collapse;
+    border: 1px solid #acbabc;
+    letter-spacing: 1px;
+    font-size: 0.8rem;
+    margin: auto;
+    max-width: 275px;
+    box-shadow: 10px 10px 20px #628ca6;
+}
+
+td,
+th {
+    border: 1px solid #acbabc;
+    padding: 0.5em;
+}
+
+th {
+    background-color: #628ca6;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    color: white;
+}
+
+td {
+    text-align: center;
+}
+
+tr:nth-child(even) td {
+    background-color: #e7ffed;
+}
+
+tr:nth-child(odd) td {
+    background-color: #e7f0ed;
+}
+
+caption {
+    padding: 10px;
+}
+
+tbody {
+    font-size: 95%;
+    font-style: italic;
+}
+
+tr:hover,
+tr:nth-child(even):hover {
+    background-color: black;
+}
+
+tr:nth-child(even) {
+    background-color: green;
+}
+
+#header,
+#footer {
+    background-color: #7fb9c2;
+}
+
+#header {
+    color: white;
+}
+
+#currentGoal {
+    background-color: #628ca6;
+}
+
+tfoot {
+    font-size: 0.8em;
+    padding: 0.5em;
+    font-weight: bold;
+}
