--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -234,8 +234,9 @@
         padding: 0;
     }
     .footer-img {
-        margin: auto;
-        margin-right: -2em;
+        margin-left: -18em;
+        grid-column: 1;
+        grid-row: 1;
     }
     .footer-company {
         margin: 1em;
