--- a/join/css/large.css
+++ b/join/css/large.css
@@ -1,295 +1,298 @@
-                @media only screen and (min-width: 64em) {
-                 :root {
-                    --Primary_color: #153158;
-                    --Secondary_color: #85C6E2;
-                    --Accent1: #FFFFFF;
-                    --Accent2: #C2C2C2;
-                }
-                * {
-                    margin: 0;
-                    padding: 0;
-                    box-sizing: border-box;
-                }
-                html {
-                    background-color: var(--Accent1);
-                }
-                img {
-                    max-width: 100%;
-                }
-                .logo-img,
-                .footer-img {
-                    width: 75px;
-                    max-width: 100%;
-                    border-radius: 50%;
-                }
-                .logo h1,
-                footer h1 {
-                    font-size: 15px;
-                }
-                .logo p {
-                    font-size: 10px;
-                }
-                .logo ul li {
-                    display: block;
-                    margin-top: -3em;
-                }
-                h1,
-                h2,
-                p {
-                    font-family: Sansita, Ubuntu, and sans-serif;
-                    text-align: center;
-                }
-                body {
-                    width: 100%;
-                    height: auto;
-                    margin: auto;
-                    /* padding: 1em; */
-                }
-                header,
-                footer {
-                    width: auto;
-                    display: grid;
-                    background-color: var(--Primary_color);
-                    color: var(--Accent1);
-                    text-align: center;
-                    height: auto;
-                    padding: 0.90em;
-                }
-                header {
-                    grid-template-columns: 10% 20% 60% 10%;
-                    grid-template-rows: 60% 40%;
-                }
-                header ul {
-                    display: inline;
-                    list-style-type: none;
-                    margin: 0;
-                    padding: 0;
-                }
-                header ul li {
-                    float: left;
-                }
-                header nav {
-                    text-decoration: none;
-                }
-                header ul li a {
-                    display: block;
-                }
-                ul {
-                    display: grid;
-                }
-                ul li {
-                    list-style-type: none;
-                }
-                #currentdate {
-                    color: var(--Accent1);
-                    padding: 0.25em;
-                }
-                nav a {
-                    color: var(--Accent1);
-                    padding: 1em;
-                }
-                nav button {
-                    display: none;
-                }
-                nav ul li {
-                    display: block;
-                }
-                .icons ul li {
-                    float: right;
-                    padding: 0;
-                    margin: 0;
-                }
-                .icons a {
-                    width: 100%;
-                    padding: 0;
-                    margin: 0;
-                }
-                #p-date {
-                    grid-row: 2;
-                    grid-column: 1/5;
-                    width: 100%;
-                    margin-top: 1em;
-                    background-color: rgba(0, 0, 0, 0.5);
-                }
-                .grid {
-                    display: grid;
-                    grid-template-columns: repeat( 4, 1fr);
-                    grid-template-rows: repeat( 3, auto);
-                }
-                .grid div {
-                    background-color: var(--Secondary_color);
-                    margin: auto;
-                    text-align: center;
-                    display: block;
-                    font-size: 1rem;
-                    margin: .6em;
-                    height: auto;
-                }
-                div p {
-                    padding: 1em;
-                    background-color: transparent;
-                }
-                .event {
-                    grid-column: 1/2;
-                    grid-row: 1/2;
-                    height: auto;
-                }
-                .weather {
-                    grid-column: 1/2;
-                    grid-row: 2/3;
-                }
-                #weather {
-                    font-size: 1.3rem;
-                    text-align: center;
-                    padding: 1px;
-                    margin-top: -8px;
-                }
-                #wind {
-                    display: flex;
-                    flex-direction: column;
-                    text-align: left;
-                    padding-left: 10px;
-                }
-                .join {
-                    grid-column: 1/2;
-                    grid-row: 3/4;
-                }
-                button {
-                    width: 90%;
-                    background-color: var(--Accent1);
-                    border-radius: 5px;
-                    padding: 15px 32px;
-                    display: inline-block;
-                    font-size: 16px;
-                    cursor: pointer;
-                    margin-top: 1em;
-                }
-                button a {
-                    color: var(--Primary_color);
-                    text-align: center;
-                    text-decoration: none;
-                }
-                .hero {
-                    grid-column: 2/4;
-                    grid-row: 1/3;
-                    padding: 0;
-                }
-                #rexburg-pic {
-                    margin: 0 0 0 0;
-                    width: 100%;
-                    height: 100%;
-                }
-                .news {
-                    grid-column: 2/4;
-                    grid-row: 3/4;
-                }
-                div.spotlight {
-                    display: grid;
-                    grid-template-rows: 3em;
-                    grid-column: 4;
-                    grid-row: 1/4;
-                    /* height: 300px; */
-                }
-                #header-img {
-                    grid-column: 1;
-                }
-                .company {
-                    grid-column: 2;
-                    grid-row: 1;
-                }
-                .company h1 {
-                    width: 100%;
-                }
-                .nav {
-                    grid-column: 3;
-                }
-                .icons {
-                    grid-column: 3/4;
-                    float: right;
-                }
-                .icons li img {
-                    width: 30px;
-                    height: auto;
-                }
-                #spot1 {
-                    grid-column: 1/3;
-                }
-                #spot1 img {
-                    width: 150px;
-                }
-                #spot2 {
-                    grid-column: 1/3;
-                }
-                #spot2 img {
-                    width: 150px;
-                }
-                #spot3 {
-                    grid-column: 1/3;
-                }
-                footer {
-                    font-size: .9rem;
-                    display: grid;
-                    grid-template-columns: 10% 10% 30% 15% 10%;
-                    grid-template-rows: 70% 30%;
-                    padding: 0;
-                }
-                .footer-img {
-                    margin: auto;
-                    grid-column: 1;
-                    grid-row: 1;
-                    .footer-company {
-                        margin: 1em;
-                    }
-                    .contact {
-                        padding: 1em;
-                        grid-column: 4;
-                        grid-row: 1;
-                    }
-                    .js {
-                        grid-column: 1/7;
-                        grid-row: 2;
-                        margin-top: 1em;
-                    }
-                    footer a {
-                        color: white;
-                        text-decoration: none;
-                    }
-                    #map {
-                        width: 20px;
-                    }
-                    #currentdate {
-                        grid-column: 1/4;
-                        grid-row: 2;
-                        width: 100%;
-                    }
-                    #spot3 {
-                        display: block;
-                    }
-                    .medium-div {
-                        display: none;
-                    }
-                    .discover img[data-src] {
-                        filter: blur(0.2em);
-                    }
-                    .discover img {
-                        filter: blur(0em);
-                        transition: filter 0.5s;
-                    }
-                    .discover-body {
-                        display: grid;
-                        margin: 0 auto;
-                        justify-items: center;
-                    }
-                    picture {
-                        width: 300px;
-                    }
-                    #discovery-header {
-                        width: 100%;
-                    }
-                    .logo-address {
-                        display: grid;
-                        grid-template-columns: 30% 70%;
-                        grid-column: 3;
-                        grid-row: 1;
-                    }
-                }
+@media only screen and (min-width: 64em) {
+     :root {
+        --Primary_color: #153158;
+        --Secondary_color: #85C6E2;
+        --Secondary_color_rgb: 133, 198, 226, 0.8;
+        --Accent1: #FFFFFF;
+        --Accent2: #C2C2C2;
+    }
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    html {
+        background-color: var(--Accent1);
+    }
+    img {
+        max-width: 100%;
+    }
+    .logo-img,
+    .footer-img {
+        width: 75px;
+        max-width: 100%;
+        border-radius: 50%;
+    }
+    .logo h1,
+    footer h1 {
+        font-size: 15px;
+    }
+    .logo p {
+        font-size: 10px;
+    }
+    .logo ul li {
+        display: block;
+        margin-top: -3em;
+    }
+    h1,
+    h2,
+    p {
+        font-family: Sansita, Ubuntu, and sans-serif;
+        text-align: center;
+    }
+    body {
+        width: 100%;
+        height: auto;
+        margin: auto;
+        /* padding: 1em; */
+    }
+    header,
+    footer {
+        width: auto;
+        display: grid;
+        background-color: var(--Primary_color);
+        color: var(--Accent1);
+        text-align: center;
+        height: auto;
+        padding: 0.90em;
+    }
+    header {
+        grid-template-columns: 10% 20% 60% 10%;
+        grid-template-rows: 60% 40%;
+    }
+    header ul {
+        display: inline;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+    header ul li {
+        float: left;
+    }
+    header nav {
+        text-decoration: none;
+    }
+    header ul li a {
+        display: block;
+    }
+    ul {
+        display: grid;
+    }
+    ul li {
+        list-style-type: none;
+    }
+    #currentdate {
+        color: var(--Accent1);
+        padding: 0.25em;
+    }
+    nav a {
+        color: var(--Accent1);
+        padding: 1em;
+    }
+    nav button {
+        display: none;
+    }
+    nav ul li {
+        display: block;
+    }
+    .icons ul li {
+        float: right;
+        padding: 0;
+        margin: 0;
+    }
+    .icons a {
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+    #p-date {
+        grid-row: 2;
+        grid-column: 1/5;
+        width: 100%;
+        margin-top: 1em;
+        background-color: rgba(0, 0, 0, 0.5);
+    }
+    .grid {
+        display: grid;
+        grid-template-columns: repeat( 4, 1fr);
+        grid-template-rows: repeat( 3, auto);
+    }
+    .grid div {
+        background-color: var(--Secondary_color);
+        margin: auto;
+        text-align: center;
+        display: block;
+        font-size: 1rem;
+        margin: .6em;
+        height: auto;
+    }
+    div p {
+        padding: 1em;
+        background-color: transparent;
+    }
+    .event {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        height: auto;
+    }
+    .weather {
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    #weather {
+        font-size: 1.3rem;
+        text-align: center;
+        padding: 1px;
+        margin-top: -8px;
+    }
+    #wind {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        padding-left: 10px;
+    }
+    .join {
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+    button {
+        width: 90%;
+        background-color: var(--Accent1);
+        border-radius: 5px;
+        padding: 15px 32px;
+        display: inline-block;
+        font-size: 16px;
+        cursor: pointer;
+        margin-top: 1em;
+    }
+    button a {
+        color: var(--Primary_color);
+        text-align: center;
+        text-decoration: none;
+    }
+    .hero {
+        grid-column: 2/4;
+        grid-row: 1/3;
+        padding: 0;
+    }
+    #rexburg-pic {
+        margin: 0 0 0 0;
+        width: 100%;
+        height: 100%;
+    }
+    .news {
+        grid-column: 2/4;
+        grid-row: 3/4;
+    }
+    div.spotlight {
+        display: grid;
+        grid-template-rows: 3em;
+        grid-column: 4;
+        grid-row: 1/4;
+        /* height: 300px; */
+    }
+    #header-img {
+        grid-column: 1;
+    }
+    .company {
+        grid-column: 2;
+        grid-row: 1;
+    }
+    .company h1 {
+        width: 100%;
+    }
+    .nav {
+        grid-column: 3;
+    }
+    .icons {
+        grid-column: 3/4;
+        float: right;
+    }
+    .icons li img {
+        width: 30px;
+        height: auto;
+    }
+    #spot1 {
+        grid-column: 1/3;
+    }
+    #spot1 img {
+        width: 150px;
+    }
+    #spot2 {
+        grid-column: 1/3;
+    }
+    #spot2 img {
+        width: 150px;
+    }
+    #spot3 {
+        grid-column: 1/3;
+    }
+    footer {
+        font-size: .9rem;
+        display: grid;
+        grid-template-columns: 10% 10% 30% 15% 10%;
+        grid-template-rows: 70% 30%;
+        padding: 0;
+    }
+    .footer-img {
+        margin: auto;
+        margin-left: -18em;
+        grid-column: 1;
+        grid-row: 1;
+    }
+    .footer-company {
+        margin: 1em;
+    }
+    .contact {
+        padding: 1em;
+        grid-column: 4;
+        grid-row: 1;
+    }
+    .js {
+        grid-column: 1/7;
+        grid-row: 2;
+        margin-top: 1em;
+    }
+    footer a {
+        color: white;
+        text-decoration: none;
+    }
+    #map {
+        width: 20px;
+    }
+    #currentdate {
+        grid-column: 1/4;
+        grid-row: 2;
+        width: 100%;
+    }
+    #spot3 {
+        display: block;
+    }
+    .medium-div {
+        display: none;
+    }
+    .discover img[data-src] {
+        filter: blur(0.2em);
+    }
+    .discover img {
+        filter: blur(0em);
+        transition: filter 0.5s;
+    }
+    .discover-body {
+        display: grid;
+        margin: 0 auto;
+        justify-items: center;
+    }
+    picture {
+        width: 300px;
+    }
+    #discovery-header {
+        width: 100%;
+    }
+    .logo-address {
+        display: grid;
+        grid-template-columns: 30% 70%;
+        grid-column: 3;
+        grid-row: 1;
+    }
+}
