--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -179,139 +179,186 @@
         grid-row: 1/3;
         padding: 0;
     }
-    #rexburg-pic {
-        margin: 0 0 0 0;
-        width: 100%;
-        height: 100%;
-    }
-    .news {
-        grid-column: 2/4;
-        grid-row: 3/4;
-    }
-    .spotight {
-        width: 1fr;
-        grid-column: 4;
-        grid-row: 1/5;
-    }
-    .spotlight div {
-        margin: 1em;
-        border: 1px solid var(--Primary_color);
-        box-shadow: 5px var(--Primary_color);
-        /* height: 300px; */
-    }
-    #header-img {
-        grid-column: 1;
-    }
-    .company {
-        grid-column: 2;
-        grid-row: 1;
-    }
-    .company h1 {
-        width: 100%;
-    }
-    .nav {
-        grid-column: 3;
-    }
-    .icons {
-        grid-column: 3/4;
-        float: right;
-    }
-    .icons li img {
-        width: 30px;
-        height: auto;
-    }
-    #spot1 {
-        grid-column: 1/3;
-    }
-    #spot1 img {
-        width: 150px;
-    }
-    #spot2 {
-        grid-column: 1/3;
-    }
-    #spot2 img {
-        width: 150px;
-    }
-    #spot3 {
-        grid-column: 1/3;
-    }
-    footer {
-        font-size: .9rem;
-        display: grid;
-        grid-template-columns: 10% 10% 30% 15% 10%;
-        grid-template-rows: 70% 30%;
-        padding: 0;
-    }
-    .footer-img {
-        margin-left: -18em;
-        grid-column: 1;
-        grid-row: 1;
-    }
-    .footer-company {
-        margin: 1em;
-    }
-    .contact {
-        padding: 1em;
-        grid-column: 4;
-        grid-row: 1;
-    }
-    .js {
-        grid-column: 1/7;
-        grid-row: 2;
-        margin-top: 1em;
-    }
-    footer a {
-        color: white;
-        text-decoration: none;
-    }
-    #map {
-        width: 20px;
-    }
-    #currentdate {
-        grid-column: 1/4;
-        grid-row: 2;
-        width: 100%;
-    }
-    #spot3 {
-        display: block;
-    }
-    .medium-div {
-        display: none;
-    }
-    .discover img[data-src] {
-        filter: blur(0.2em);
-    }
-    .discover img {
-        filter: blur(0em);
-        transition: filter 0.5s;
-    }
-    .discover-body {
-        display: grid;
-        margin: 0 auto;
-        justify-items: center;
-    }
-    picture {
-        width: 300px;
-        margin: 1em;
-    }
-    #discovery-header {
-        width: 100%;
-    }
-    .logo-address {
-        display: grid;
-        grid-template-columns: 30% 70%;
-        grid-column: 3;
-        grid-row: 1;
-    }
-    .discover-body h1 {
-        margin: 1em;
-    }
-    #date {
-        color: white;
-    }
-    hr {
-        height: 1px;
-        background-color: var(--Primary_color);
-        border: none;
-    }
+}
+
+.hero-text {
+    position: absolute;
+    margin-top: 1em;
+    margin-left: 2em;
+}
+
+#rexburg-pic {
+    margin: 0 0 0 0;
+    width: 100%;
+    height: 100%;
+}
+
+.news {
+    grid-column: 2/4;
+    grid-row: 3/4;
+}
+
+.spotight {
+    width: 1fr;
+    grid-column: 4;
+    grid-row: 1/5;
+}
+
+.spotlight div {
+    margin: 1em;
+    border: 1px solid var(--Primary_color);
+    box-shadow: 5px var(--Primary_color);
+    /* height: 300px; */
+}
+
+#header-img {
+    grid-column: 1;
+}
+
+.company {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.company h1 {
+    width: 100%;
+}
+
+.nav {
+    grid-column: 3;
+}
+
+.icons {
+    grid-column: 3/4;
+    float: right;
+}
+
+.icons li img {
+    width: 30px;
+    height: auto;
+}
+
+#spot1 {
+    grid-column: 1/3;
+}
+
+#spot1 img {
+    width: 150px;
+}
+
+#spot2 {
+    grid-column: 1/3;
+}
+
+#spot2 img {
+    width: 150px;
+}
+
+#spot3 {
+    grid-column: 1/3;
+}
+
+footer {
+    font-size: .9rem;
+    display: grid;
+    grid-template-columns: 10% 10% 30% 15% 10%;
+    grid-template-rows: 70% 30%;
+    padding: 0;
+}
+
+.footer-img {
+    margin-left: -18em;
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.footer-company {
+    margin: 1em;
+}
+
+.contact {
+    padding: 1em;
+    grid-column: 4;
+    grid-row: 1;
+}
+
+.js {
+    grid-column: 1/7;
+    grid-row: 2;
+    margin-top: 1em;
+}
+
+footer a {
+    color: white;
+    text-decoration: none;
+}
+
+#map {
+    width: 20px;
+}
+
+#currentdate {
+    grid-column: 1/4;
+    grid-row: 2;
+    width: 100%;
+}
+
+#spot3 {
+    display: block;
+}
+
+.medium-div {
+    display: none;
+}
+
+.discover img[data-src] {
+    filter: blur(0.2em);
+}
+
+.discover img {
+    filter: blur(0em);
+    transition: filter 0.5s;
+}
+
+.discover-body {
+    display: grid;
+    margin: 0 auto;
+    justify-items: center;
+}
+
+picture {
+    width: 300px;
+    margin: 1em;
+}
+
+#discovery-header {
+    width: 100%;
+}
+
+.logo-address {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-column: 3;
+    grid-row: 1;
+}
+
+.discover-body h1 {
+    margin: 1em;
+}
+
+#date {
+    color: white;
+}
+
+hr {
+    height: 1px;
+    background-color: var(--Primary_color);
+    border: none;
+}
+
+div.medium-div {
+    display: none;
+}
+
+
 }
