--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -39,6 +39,9 @@
         font-family: Sansita, Ubuntu, and sans-serif;
         text-align: center;
     }
+    div h2 {
+        margin-bottom: 1em;
+    }
     body {
         width: 100%;
         height: auto;
@@ -104,17 +107,25 @@
         padding: 0;
         margin: 0;
     }
-    #p-date {
+    .date {
         grid-row: 2;
         grid-column: 1/5;
         width: 100%;
         margin-top: 1em;
+        padding-bottom: 2em;
+        padding-top: 0.25em;
+        border-radius: 5px;
         background-color: rgba(0, 0, 0, 0.5);
+    }
+    .date p {
+        padding: 0;
     }
     .grid {
         display: grid;
-        grid-template-columns: repeat( 4, 1fr);
+        grid-template-columns: repeat( 4, 25%);
         grid-template-rows: repeat( 3, auto);
+        margin-left: -1em;
+        margin-right: 1em;
     }
     .grid div {
         background-color: var(--Secondary_color);
@@ -124,6 +135,7 @@
         font-size: 1rem;
         margin: .6em;
         height: auto;
+        box-shadow: 0px 0px 30px 0px var(--Primary_color);
     }
     div p {
         padding: 1em;
@@ -133,10 +145,12 @@
         grid-column: 1/2;
         grid-row: 1/2;
         height: auto;
+        padding: 1em;
     }
     .weather {
         grid-column: 1/2;
         grid-row: 2/3;
+        padding: 1em;
     }
     .weather label {
         width: 90%;
@@ -158,10 +172,14 @@
     .join {
         grid-column: 1/2;
         grid-row: 3/4;
+        padding-top: 1em;
+        padding-bottom: 2em;
     }
+    .button,
     button {
+        color: white;
         width: 90%;
-        background-color: var(--Accent1);
+        background-color: var(--Primary_color);
         border-radius: 5px;
         padding: 15px 32px;
         display: inline-block;
@@ -179,186 +197,147 @@
         grid-row: 1/3;
         padding: 0;
     }
-}
-
-.hero-text {
-    position: absolute;
-    margin-top: 1em;
-    margin-left: 2em;
-}
-
-#rexburg-pic {
-    margin: 0 0 0 0;
-    width: 100%;
-    height: 100%;
-}
-
-.news {
-    grid-column: 2/4;
-    grid-row: 3/4;
-}
-
-.spotight {
-    width: 1fr;
-    grid-column: 4;
-    grid-row: 1/5;
-}
-
-.spotlight div {
-    margin: 1em;
-    border: 1px solid var(--Primary_color);
-    box-shadow: 5px var(--Primary_color);
-    /* height: 300px; */
-}
-
-#header-img {
-    grid-column: 1;
-}
-
-.company {
-    grid-column: 2;
-    grid-row: 1;
-}
-
-.company h1 {
-    width: 100%;
-}
-
-.nav {
-    grid-column: 3;
-}
-
-.icons {
-    grid-column: 3/4;
-    float: right;
-}
-
-.icons li img {
-    width: 30px;
-    height: auto;
-}
-
-#spot1 {
-    grid-column: 1/3;
-}
-
-#spot1 img {
-    width: 150px;
-}
-
-#spot2 {
-    grid-column: 1/3;
-}
-
-#spot2 img {
-    width: 150px;
-}
-
-#spot3 {
-    grid-column: 1/3;
-}
-
-footer {
-    font-size: .9rem;
-    display: grid;
-    grid-template-columns: 10% 10% 30% 15% 10%;
-    grid-template-rows: 70% 30%;
-    padding: 0;
-}
-
-.footer-img {
-    margin-left: -18em;
-    grid-column: 1;
-    grid-row: 1;
-}
-
-.footer-company {
-    margin: 1em;
-}
-
-.contact {
-    padding: 1em;
-    grid-column: 4;
-    grid-row: 1;
-}
-
-.js {
-    grid-column: 1/7;
-    grid-row: 2;
-    margin-top: 1em;
-}
-
-footer a {
-    color: white;
-    text-decoration: none;
-}
-
-#map {
-    width: 20px;
-}
-
-#currentdate {
-    grid-column: 1/4;
-    grid-row: 2;
-    width: 100%;
-}
-
-#spot3 {
-    display: block;
-}
-
-.medium-div {
-    display: none;
-}
-
-.discover img[data-src] {
-    filter: blur(0.2em);
-}
-
-.discover img {
-    filter: blur(0em);
-    transition: filter 0.5s;
-}
-
-.discover-body {
-    display: grid;
-    margin: 0 auto;
-    justify-items: center;
-}
-
-picture {
-    width: 300px;
-    margin: 1em;
-}
-
-#discovery-header {
-    width: 100%;
-}
-
-.logo-address {
-    display: grid;
-    grid-template-columns: 30% 70%;
-    grid-column: 3;
-    grid-row: 1;
-}
-
-.discover-body h1 {
-    margin: 1em;
-}
-
-#date {
-    color: white;
-}
-
-hr {
-    height: 1px;
-    background-color: var(--Primary_color);
-    border: none;
-}
-
-div.medium-div {
-    display: none;
-}
-
-
+    .hero-text {
+        position: absolute;
+        margin-top: 1em;
+        margin-left: 2em;
+    }
+    #rexburg-pic {
+        margin: 0 0 0 0;
+        width: 100%;
+        height: 100%;
+    }
+    .news {
+        grid-column: 2/4;
+        grid-row: 3/4;
+        padding: 1em;
+    }
+    .spotlight div {
+        margin: 1em;
+        border: 1px solid var(--Primary_color);
+        box-shadow: 5px var(--Primary_color);
+        /* height: 300px; */
+    }
+    #header-img {
+        grid-column: 1;
+    }
+    .company {
+        grid-column: 2;
+        grid-row: 1;
+    }
+    .company h1 {
+        width: 100%;
+    }
+    .nav {
+        grid-column: 3;
+    }
+    .icons {
+        grid-column: 3/4;
+        float: right;
+    }
+    .icons li img {
+        width: 30px;
+        height: auto;
+    }
+    #spot1 {
+        grid-column: 1/3;
+    }
+    #spotlight {
+        grid-column: 4;
+        grid-row: 1/4;
+    }
+    #spotlight img {
+        width: 26%;
+    }
+    #spot2 {
+        grid-column: 1/3;
+    }
+    #spot3 {
+        grid-column: 1/3;
+    }
+    footer {
+        font-size: .9rem;
+        display: grid;
+        grid-template-columns: 10% 10% 30% 15% 10%;
+        grid-template-rows: 70% 30%;
+        padding: 0;
+    }
+    .footer-img {
+        margin-left: -18em;
+        grid-column: 1;
+        grid-row: 1;
+    }
+    .footer-company {
+        margin: 1em;
+    }
+    .contact {
+        padding: 1em;
+        grid-column: 4;
+        grid-row: 1;
+    }
+    .js {
+        grid-column: 1/7;
+        grid-row: 2;
+        margin-top: 1em;
+    }
+    footer a {
+        color: white;
+        text-decoration: none;
+    }
+    #map {
+        width: 20px;
+    }
+    #currentdate {
+        grid-column: 1/4;
+        grid-row: 2;
+        width: 100%;
+    }
+    #spot3 {
+        display: block;
+    }
+    .medium-div {
+        display: none;
+    }
+    .discover img[data-src] {
+        filter: blur(0.2em);
+    }
+    .discover img {
+        filter: blur(0em);
+        transition: filter 0.5s;
+    }
+    .discover-body {
+        display: grid;
+        margin: 0 auto;
+        justify-items: center;
+    }
+    picture {
+        width: 300px;
+        margin: 1em;
+    }
+    #discovery-header {
+        width: 100%;
+    }
+    .logo-address {
+        display: grid;
+        grid-template-columns: 30% 70%;
+        grid-column: 3;
+        grid-row: 1;
+    }
+    .discover-body h1 {
+        margin: 1em;
+    }
+    #date {
+        color: white;
+    }
+    hr {
+        height: 1px;
+        background-color: var(--Primary_color);
+        border: none;
+    }
+    div.medium-div {
+        display: none;
+    }
+    .weather-form {
+        background: white;
+    }
 }
