--- a/lesson9/prophets.css
+++ b/lesson9/prophets.css
@@ -1,78 +1,90 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
-body {
-    font-size: 16px;
-    font-family: Poppins, Arial, Helvetica, sans-serif;
-}
-
-header,
-main,
-footer {
-    margin: 1rem;
-    position: relative;
-}
-
-h1 {
-    color: #000;
-    border-bottom: 1px solid #eee;
-    text-shadow: 0 0 15px #999;
-    width: 60%;
-}
-
-h2 {
-    color: blue;
-    margin: 0;
-}
-
-h3 {
-    margin: 0;
-}
-
-h4 {
-    color: #333;
-    margin: 7px 0 5px 0;
-}
-
-p {
-    margin: 0;
-}
-
-main {
-    margin-left: 2rem;
-}
-
-.grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-}
-
-section {
-    margin: 0.25rem;
-    padding: 0.35rem;
-    background-color: #eee;
-    border: 1px solid #bbb;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-section>p {
-    min-height: 60px;
-}
-
-img {
-    width: auto;
-    max-width: 325px;
-    box-shadow: 0 0 30px #777;
-    height: 200px;
-    border: 1px solid #333;
-}
-
-li>img {
-    width: auto;
-    height: 30px;
-}
-
-footer {
-    border-top: 1px solid #555;
-    padding: 20px;
-}
+    @import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
+    body {
+        font-size: 16px;
+        font-family: Poppins, Arial, Helvetica, sans-serif;
+    }
+    
+    header,
+    main,
+    footer {
+        margin: 1rem;
+        position: relative;
+    }
+    
+    h1 {
+        color: #000;
+        border-bottom: 1px solid #eee;
+        text-shadow: 0 0 15px #999;
+        width: 60%;
+    }
+    
+    h2 {
+        color: blue;
+        margin: 0;
+    }
+    
+    h3 {
+        margin: 0;
+    }
+    
+    h4 {
+        color: #333;
+        margin: 7px 0 5px 0;
+    }
+    
+    p {
+        margin: 0;
+    }
+    
+    main {
+        margin-left: 2rem;
+    }
+    
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    }
+    
+    section {
+        margin: 0.25rem;
+        padding: 0.35rem;
+        background-color: #eee;
+        border: 1px solid #bbb;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    section>p {
+        min-height: 60px;
+    }
+    
+    img {
+        width: auto;
+        max-width: 325px;
+        box-shadow: 0 0 30px #777;
+        height: 200px;
+        border: 1px solid #333;
+    }
+    
+    li>img {
+        width: auto;
+        height: 30px;
+    }
+    
+    footer {
+        border-top: 1px solid #555;
+        padding: 20px;
+    }
+    
+    h1 {
+        text-align: right;
+    }
+    
+    section {
+        background-color: #b9b9cc;
+    }
+    
+    .cards {
+        box-shadow: 0 0 30px #777;
+    }
