--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -69,6 +69,10 @@ ul li::marker {
     color: transparent;
 }
 
+section>p {
+    min-height: 60px;
+}
+
 
 /* h1,
 h2 {
@@ -296,4 +300,50 @@ nav .icons li {
 .icons {
     grid-column: 4;
     grid-row: 1;
+}
+
+main {
+    margin-left: 2rem;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+}
+
+section {
+    margin: 0.25rem;
+    padding: 0.35rem;
+    background-color: #eee;
+    border: 1px solid #bbb;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5px;
+}
+
+section>p {
+    min-height: 60px;
+    margin: 0;
+}
+
+.cards p {
+    margin: 0;
+    padding-bottom: 0;
+}
+
+.cards img {
+    width: auto;
+    max-width: 325px;
+    box-shadow: 0 0 30px #777;
+    height: 200px;
+    border: 1px solid #333;
+}
+
+main h1 {
+    color: #000;
+    border-bottom: 1px solid #eee;
+    text-shadow: 0 0 15px #999;
+    width: 60%;
+    padding: 1em;
 }
