--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -293,3 +293,17 @@ main h1 {
     width: 60%;
     padding: 1em;
 }
+
+.button,
+button {
+    color: white;
+    width: 90%;
+    background-color: var(--Primary_color);
+    border-radius: 5px;
+    padding: 15px 32px;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    margin-top: 1em;
+}
