--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -58,6 +58,10 @@
         grid-template-columns: repeat(2, 1fr);
         align-items: center;
     }
+    #hamburgerBtn {
+        background-color: #FFFFFF;
+        color: black;
+    }
     nav button {
         display: block;
         float: right;
@@ -103,14 +107,18 @@
         padding: 1em;
         /* height: 300px; */
     }
-    .spotlight {
-        width: 50%;
-    }
     #spot1 {
         grid-column: 1;
     }
     #spot2 {
         grid-column: 2;
+    }
+    #spotlight img {
+        width: 10%;
+        float: left;
+    }
+    #train {
+        margin-top: -3em;
     }
     .medium-div {
         display: grid;
