--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -108,7 +108,7 @@
         padding: 0;
         margin: 0;
     }
-    .date {
+    .divdate {
         grid-row: 2;
         grid-column: 1/5;
         width: 100%;
@@ -118,8 +118,9 @@
         border-radius: 5px;
         background-color: rgba(0, 0, 0, 0.5);
     }
-    .date p {
+    .date {
         padding: 0;
+        margin: 0;
     }
     .grid {
         display: grid;
@@ -129,7 +130,6 @@
         margin-right: 1em;
     }
     div p {
-        padding: 1em;
         background-color: transparent;
     }
     .event {
