--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -120,16 +120,9 @@
     #train {
         margin-top: -3em;
     }
-    .medium-div {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-column: 1/3;
-    }
-    .medium-div .event {
-        grid-column: 1/3;
-    }
-    .medium-div .weather {
-        grid-column: 3/4;
+    #medium-div {
+        display: flex;
+        width: 190%;
     }
     .large-div {
         display: none;
@@ -138,5 +131,8 @@
         height: 1px;
         background-color: var(--Primary_color);
         border: none;
+    }
+    #spotlight {
+        display: flex;
     }
 }
