--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -362,4 +362,9 @@
         margin: 0;
         padding: 0;
     }
+    #contact-form {
+        background-color: #85C6E2;
+        margin-top: 5em;
+        border-radius: 50px;
+    }
 }
